--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NEXT_PUBLIC_WOO_CONSUMER_KEY=ck_cf85a1b7ff3995ad3f7a203382d0a92def35fe74
 NEXT_PUBLIC_WOO_CONSUMER_SECRET=cs_84a9ce0b24ce09b6f49b898f4a98998fd370589a
-NEXT_PUBLIC_WORDPRESS_API_URL=https://plum-capybara-409476.hostingersite.com
+NEXT_PUBLIC_WORDPRESS_API_URL=http://french-opaname.store
 NEXT_PUBLIC_BASE_URL=''
 RESEND_API_KEY=
 ANALYTICS_ID=
